# gneiss-lang

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.beads/: issues.jsonl
.cargo/: config.toml
.claude/commands/: end.md  start.md
.github/: copilot-instructions.md
docs/: COMPILER_DESIGN.md  DESIGN.md  FUTURE_ROADMAP.md  GRAMMAR.md  ROADMAP.md  SYNTAX.md  TESTING.md  algebraic_effect_parser_combinators_guide.md  broken_effect.md  comp_impl_guide.md  delim_again.md  delim_cont.md  delim_cont_2.md  delim_cont_types.md  delim_prop.rs  do_it_again.md  prop_for_delim_cont.md  typeclasses_plan.md  typeclasses_technical.md  union_find.md
examples/: adt.gn  adt_fail.gn  args_test.gn  async_workers.gn  basic.gn  channel.gn  channels.gn  compare.ml  concurrency_stress.gn  continuations_basic.gn  continuations_collect.gn  continuations_escape.gn  dict.gn  dining_philosophers.gn  dining_philosophers_solved.gn  hello_server.gn  json_api.gn  map.gn  mono.gn  nested_workers.gn  pipeline.gn  records.gn  rest_api.gn  routing_server.gn  select.gn  service_mesh.gn  set.gn  show_nested_opt.gn  show_option_none.gn  so_un.gn  stress_fibers_100.gn  stress_fibers_1000.gn  stress_fibers_500.gn  string.gn  strings.gn  test.gn  type_check.gn  typeclass_option.gn  typeclass_test.gn  worker_pool.gn
examples/aoc/2023/: day01.gn
examples/cont/: PATTERNS.md  basic_mutual_rec.gn  basic_shift.gn  gen.gn  minimal_alt.gn  mutual_rec_alt.gn  pattern_answer_types.gn  pattern_backtracking.gn  pattern_coroutines.gn  pattern_effect_handlers.gn  pattern_exceptions.gn  pattern_generators.gn  pattern_nondeterminism.gn  pattern_parsers.gn  pattern_state.gn  recursive_shift_issue.gn
examples/effects/: config_reader.gn  counter_with_logging.gn  parser_combinators.gn  parser_lib.gn  polymorphism.gn
issues/: bug1.md  bug2.md  bug3.md  bug4.md  bug5.md  bug6.md  type_cleanup.md
lisp/: README.md  gneiss-ts-mode.el
runtime/: gn_runtime.c  gn_runtime.h
src/: ast.rs  blocking_pool.rs  elaborate.rs  errors.rs  eval.rs  infer.rs  io_reactor.rs  lexer.rs  lib.rs  main.rs  module.rs  mono.rs  operators.rs  parser.rs  prelude.rs  runtime.rs  tast.rs  test_support.rs  typed_ast.rs  types.rs
src/codegen/: c_emit.rs  closure.rs  core_ir.rs  cps_transform.rs  effect_analysis.rs  emit_flat.rs  lower.rs  lower_mono.rs  mod.rs
src/parser/: combinators.rs  cursor.rs  error.rs  mod.rs  pattern.rs  record.rs  types.rs
stdlib/: html.gn  http.gn  json.gn  prelude.gn  request.gn  response.gn  router.gn  server.gn
stdlib/effect/: abort.gn  async.gn  exn.gn  io.gn  non_det.gn  reader.gn  state.gn  writer.gn
stdlib/http/: request.gn  response.gn
stdlib/server/: router.gn
tests/: algebraic_effects.rs  ast_structure.rs  codegen_effects.rs  codegen_minimal.rs  edge_cases_module_val.rs  error_snapshots.rs  fiber_effects.rs  parser_negative.rs  parser_unit.rs  pattern_stress.rs  polymorphic_dispatch.rs  properties.proptest-regressions  properties.rs  proptest_answer_types.proptest-regressions  proptest_answer_types.rs  proptest_continuations.proptest-regressions  proptest_continuations.rs  proptest_effects.proptest-regressions  proptest_effects.rs  proptest_typeclasses.proptest-regressions  proptest_typeclasses.rs  scheduler_stress.rs  tail_call_optimization.rs  type_rejection.rs  type_verification.rs  typeclass_stress.rs  typed_ast_inspection.rs
tests/snapshots/: lex_error_unexpected.expected  lex_error_unterminated_string.expected  parse_error_eof.expected  parse_error_unexpected.expected  type_error_mismatch.expected  type_error_suggestion.expected  type_error_unbound.expected
