-- Early exit / escape continuation pattern
-- Similar to exceptions but without special syntax

-- with_escape provides an "escape" function to the body
-- Calling escape immediately returns that value from the reset
let with_escape body =
    reset (body (fun result -> shift (fun _ -> result)))

-- Example: early exit from computation
let compute_or_bail () =
    with_escape (fun bail ->
        let x = 10 in
        let y = if x < 0 then bail 0 else x * 2 in
        y + 5
    )

-- Example: short-circuit evaluation
let early_exit_example () =
    with_escape (fun escape ->
        let a = 1 in
        let b = escape 42 in  -- this escapes immediately
        b + 100               -- never reached
    )

let main () =
    print (compute_or_bail ());   -- 25 (10*2 + 5, no bail)
    print (early_exit_example ()) -- 42 (escaped early)
